# vmlab

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  README.md  compose.yaml  install.sh  justfile  vmlab-prd.md  wrangler.toml
.claude/skills/vmlab/: SKILL.md
.github/workflows/: ci.yml  deploy-site.yml
docker/: README.md
docker/lab/: provision.ws  vmlab.wcl
docker/share/: README.txt
docs/: main.wcl  vmlab-prd.md
docs/pages/vmlab/: features.wcl  getting-started.wcl  home-template.wcl  index.wcl
examples/ad-lab/: vmlab.wcl
examples/alpine-arm64/: README.md  vmlab.wcl
examples/alpine-registry/: README.md  vmlab.wcl
examples/mixed-lab/: README.md  vmlab.wcl
examples/riscv64-ubuntu/: README.md  vmlab.wcl
examples/winsrv-desktop/: README.md  vmlab.wcl
scripts/: watch_screens.py
src/: lib.rs  logs.rs  main.rs  paths.rs  sync.rs  viewer.rs
src/cli/: console.rs  daemon.rs  lab.rs  media.rs  mod.rs  net.rs  validate.rs
src/config/: extract.rs  host.rs  host_schema.wcl  mod.rs  model.rs  schema.wcl  validate.rs
src/labd/: events.rs  lab.rs  mod.rs  netservices.rs  network.rs  state.rs  vm.rs
src/media/: cache.rs  floppy.rs  hash.rs  iso.rs  mod.rs
src/net/: dhcp.rs  dns.rs  frame.rs  framing.rs  gateway.rs  mod.rs  nat.rs  rules.rs  switch.rs
src/oci/: auth.rs  chunking.rs  client.rs  config_blob.rs  manifest.rs  media_types.rs  mod.rs  reference.rs
src/profiles/: mod.rs  profile_schema.wcl  shipped.wcl
src/proto/: client.rs  mod.rs  server.rs
src/qemu/: cmdline.rs  firmware.rs  mod.rs  process.rs  resolve.rs
src/qga/: mod.rs  tests.rs
src/qmp/: client.rs  error.rs  mod.rs  tests.rs  types.rs
src/scripting/: interact.rs  mod.rs  runner.rs
src/smb/: config.rs  mod.rs  mount.rs  server.rs
src/supervisor/: global.rs  mod.rs  registry.rs
src/template/: artefact.rs  build.rs  cli.rs  meta.rs  meta_schema.wcl  mod.rs  oci_bridge.rs  qimg.rs  store.rs
src/vision/: matching.rs  mod.rs  ocr.rs  screenshot.rs
src/web/: api.rs  assets.rs  auth.rs  events.rs  logs.rs  main.rs  state.rs  vnc.rs
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  api.ts  index.tsx  novnc.d.ts  store.ts  theme.css
(+242 files in other folders)
